<resources>
    <string name="error_operation_failed">操作失败：</string>
    <string name="error_unable_load_servers">无法载入服务器列表，尝试清除应用数据可能有助于解决此问题：</string>
    <string name="error_invalid_number_less_or_equal">数字不合法，应小于或等于 %d</string>
    <string name="error_invalid_number_more_or_equal">数字不合法，应大于或等于 %d</string>
    <!-- Strings related to Server List -->
    <string name="app_name">MineCraft Rcon 管理工具</string>
    <string name="title_main">Rcon 服务器列表</string>
    <string name="no_server">未添加任何 MineCraft 服务器</string>
    <string name="action_settings">设置</string>
    <string name="action_duplicate">制作副本</string>
    <string name="action_share">分享</string>
    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_ok">确认</string>
    <string name="action_cancel">取消</string>
    <string name="action_refresh">刷新</string>
    <string name="server_name_default_text">服务器</string>
    <!-- Strings related to Add Server -->
    <string name="title_activity_add_server">添加或修改 Rcon 服务器</string>
    <string name="text_add_server_edit_mode">编辑模式 / 正在编辑服务器：</string>
    <string name="prompt_name">服务器名称 (任意命名)</string>
    <string name="prompt_host">服务器地址</string>
    <string name="prompt_port">Rcon 端口 [通常为 25575 或 27015]</string>
    <string name="prompt_password">Rcon 密码 (可选)</string>
    <string name="prompt_invalid_port">端口号不合法 (应介于 1~65535)</string>
    <string name="action_add_server">保存服务器</string>
    <string name="action_test_server">测试连接</string>
    <string name="confirm_server_delete">你确定要删除 %s 吗？</string>
    <string name="prompt_deleted">已删除 %s</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_address_default_text">主机:端口</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_invalid_sid">无效服务器 SID:</string>
    <string name="success_edit">编辑 %s 成功</string>
    <string name="success_add">添加 %s 成功</string>
    <string name="name_duplicated">" - 副本"</string>
    <string name="success_duplicated">成功制作 %s 的副本</string>
    <string name="text_share_server">Rcon 服务器信息\n名称：%s\n地址：%s\n端口号：%d\n密码：%s</string>
    <string name="prompt_share_server">分享服务器信息 （注意：Rcon 服务器密码也会被分享）</string>
    <string name="prompt_command">命令</string>
    <string name="action_run">运行</string>
    <string name="action_command_history">命令历史</string>
    <string name="action_quick_command">快速命令</string>
    <string name="action_prev">上一个</string>
    <string name="action_next">下一个</string>
    <string name="action_connection_info">连接信息</string>
    <string name="action_clean_command_area">清空命令结果</string>
    <string name="action_exit">退出</string>
    <string name="action_clean_history">清空命令历史</string>
    <string name="action_back">返回</string>
    <string name="prompt_connectied_to">已连接</string>
    <string name="prompt_connecting">正在连接到 %s\n%s</string>
    <string name="prompt_connection_failed">连接 %s 失败\n\n%s</string>
    <string name="command_result_area">COMMAND RESULT AREA</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_about">关于</string>
    <string name="title_terminal">终端</string>
    <string name="title_command_prompt">命令提示符</string>
    <string name="title_auto_start">自动连接 rcon:// 服务器</string>
    <string name="desc_auto_start">当点击 rcon:// 链接时，自动连接并显示终端</string>
    <string name="desc_command_prompt">显示在终端的命令提示符</string>
    <string name="title_connection">Rcon 服务器连接</string>
    <string name="title_terminal_text_size">终端字体大小</string>
</resources>
